worked a bit on better vectorization